Adding changes to repository

--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -1,6 +1,5 @@
 {% extends 'djangoapp/base.html' %}
-
 {% block content %}
-    <h1>home page</h1>
+<h1>Contact Us</h1>
 {% endblock content %}
     
