--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-    <body>
-    <!--Add a registration form here -->
-    </body>
-</html>
+{% extends 'djangoapp/base.html' %}
+
+{% block content %}
+  
+<div class="container">
+    <h2>Registration form</h2>
+    <form class="form-horizontal" action="{% url 'djangoapp:register' %}" method="post">
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="email">Username</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="username" placeholder="Username..." name="username">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="email">First name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="first_name" placeholder="Enter first name..." name="first_name">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="last_name">Last name</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="last_name" placeholder="Enter last name..." name="last_name">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="pwd">Password</label>
+        <div class="col-sm-10">          
+          <input type="password" class="form-control" id="password" placeholder="Enter password..." name="password">
+        </div>
+      </div>
+      <div class="form-group">        
+        <div class="col-sm-offset-2 col-sm-10">
+          <div class="checkbox">
+            <label><input type="checkbox" name="remember"> Remember me</label>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">        
+        <div class="col-sm-offset-2 col-sm-10">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </form>
+  </div>
+{% endblock content %}
+  
+
+  
