--- a/server/djangoapp/templates/djangoapp/nav.html
+++ b/server/djangoapp/templates/djangoapp/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="container navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="{% url 'djangoapp:index' %}">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
